<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/your_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/your_order"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0"
            android:textSize="22sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:orientation="horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/your_order"
            app:spanCount="1"
            />
        <TextView
            android:id="@+id/amount_to_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_to_pay"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/items"
            />
        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$143.23"
            android:layout_marginTop="16dp"

            app:layout_constraintStart_toEndOf="@id/amount_to_pay"
            app:layout_constraintTop_toBottomOf="@id/items"
            app:layout_constraintEnd_toEndOf="@+id/content_end"
            app:layout_constraintHorizontal_bias="1"
            />

        <TextView
            android:id="@+id/delivery_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_fee"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/amount_to_pay"
            />
        <TextView
            android:id="@+id/fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$1.23"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/amount_to_pay"
            app:layout_constraintTop_toBottomOf="@id/amount"
            app:layout_constraintEnd_toEndOf="@+id/content_end"
            app:layout_constraintHorizontal_bias="1"
            />
        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/delivery_fee"
            />
        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$146.46"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/amount_to_pay"
            app:layout_constraintTop_toBottomOf="@id/fee"
            app:layout_constraintEnd_toEndOf="@+id/content_end"
            app:layout_constraintHorizontal_bias="1"
            />
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total"
            app:layout_constraintBottom_toTopOf="@id/name_input"
            android:layout_marginTop="8dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="@+id/content_end"
            app:layout_constraintStart_toStartOf="@+id/content_start"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/pay_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintEnd_toEndOf="@+id/content_end"
            app:layout_constraintTop_toBottomOf="@id/name_input"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_height="50dp"
                    android:layout_width="100dp"
                    android:src="@drawable/master_card"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_start"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_end"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
